--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     margin: 0px;
 } 
  body{
-        background-size:cover ;    
-    height: 100px;
+         background-size:cover ;     
+    height: 100%;
+    background-repeat: no-repeat;
  }
  body p{
    padding-top: 25%;
@@ -66,22 +67,21 @@ h1{
   margin-left: 30%;
 
 }
-#head a{
-
-  
- 
-    font-family: 'Lucida Sans' ;
-    font-size: 20px;
-    text-decoration: none;
-    color: whitesmoke;
-     border: 1px solid whitesmoke; 
-    padding-left: 20% ;
-    padding-right: 20%;
-      margin-right: 30px;  
-     padding-top:  20px; 
-     padding-bottom: 20px;
-     background-color:blue;
+.row a{
+  font-family: 'Lucida Sans' ;
+  height: 80px;
+  font-size: 20px;
+  text-decoration: none;
+  color: white;
+   border: 1px solid whitesmoke; 
+  padding-left: 20% ;
+  padding-right: 20%;
+    margin-right: 30px;  
+   padding-top:  20px; 
+   padding-bottom: 20px;
+   background-color:skyblue;
 }
+
 .check-sq{
   width: 50%;
   height: 50%;
