--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h1{
 }
 .row a{
   font-family: 'Lucida Sans' ;
-  width: 50%;
+  width: 50px;
   height: 80px;
   font-size: 20px;
   text-decoration: none;
