--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
   color: grey;
  }
  body a{
-   padding-top: 90%;
-   padding-left: 50%;
+   /* padding-top: 90%; */
+   /* padding-left: 50%; */
    font-size: xx-large;
    text-decoration: none;
  }
@@ -56,9 +56,9 @@ h1{
 }
 #head{
   
-  padding-top: 30px;
+  padding-top: 8px;
   padding-right:20px ;
-  padding-left: 20px;
+  padding-left: 70%;
   list-style: none;
   
 }
@@ -85,7 +85,7 @@ h1{
   padding-left: 20% ;
   padding-right: 20%;
     margin-right: 30px;  
-   padding-top:  20px; 
+   padding-top:  1px; 
    padding-bottom: 20px;
    background-color:skyblue;
    padding: 25px;
