--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
   color: grey;
  }
  body a{
-   /* padding-top: 90%; */
-   /* padding-left: 50%; */
+    padding-top: 90%; 
+    padding-left: 50%; 
    font-size: xx-large;
    text-decoration: none;
  }
@@ -31,9 +31,11 @@
   padding-left: 30%; 
 }
 #login{
+  border-color: blue;
   background-color: blue;
   font-family: 'Lucida Sans' ;
   padding: 5px;
+  padding-left: 20px;
 }
 #alarm{
   float: right;
@@ -56,9 +58,9 @@ h1{
 }
 #head{
   
-  padding-top: 8px;
+  padding-top: 20px;
   padding-right:20px ;
-  padding-left: 70%;
+ 
   list-style: none;
   
 }
